# ygopfg

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: cardinfo.h  cardstatistics.h  commandline.h  database.h  parsedcardinfo.h  parseutil.h
src/: cardinfo.cpp  cardstatistics.cpp  commandline.cpp  database.cpp  main.cpp  parsedcardinfo.cpp  parseutil.cpp
